add staging-1b cluster

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
                 <p> Cluster:
                   <select name="cross_client">
                     <option value="kubernetes">Staging-1a</option>
+                    <option value="kubernetes-staging-1b">Staging-1b</option>
                     <option value="kubernetes-svc">Svc</option>
                     <option value="kubernetes-prod">Prod</option>
                   </select>
