--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,9 @@
               <form action="/login" method="post">
                 <p> Cluster:
                   <select name="cross_client">
-                    <option value="kubernetes">Staging-1a</option>
-                    <option value="kubernetes-staging-1b">Staging-1b</option>
-                    <option value="kubernetes-svc">Svc</option>
-                    <option value="kubernetes-prod">Prod</option>
+                    {{- range .ClusterList }}
+                    <option value="{{ . }}">{{ . }}</option>
+                    {{- end }}
                   </select>
                 </p>
                 <p>
