--- a/templates/token.html
+++ b/templates/token.html
@@ -49,7 +49,14 @@
 				<form action="/download" method="post">
 					<input type="hidden" name="refresh_token" value="{{ .RefreshToken }}">
 					<input type="hidden" name="id_token" value="{{ .IDToken }}">
+					<input type="hidden" name="internal" value="false">
 					<input type="submit" value="Download Kubeconfig">
+				</form>
+				<form action="/download" method="post">
+					<input type="hidden" name="refresh_token" value="{{ .RefreshToken }}">
+					<input type="hidden" name="id_token" value="{{ .IDToken }}">
+					<input type="hidden" name="internal" value="true">
+					<input type="submit" value="Download Internal Kubeconfig">
 				</form>
 			</div>
 		</div>
