--- a/templates/token.html
+++ b/templates/token.html
@@ -1,90 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Dex Dashboard</title>
+  <title>Dex Dashboard</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap Core CSS -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="assets/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+  <!-- Custom Fonts -->
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet"
+    type="text/css">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="assets/css/stylish-portfolio.min.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="assets/css/stylish-portfolio.min.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body id="page-top">
-    <!-- Navigation -->
-    <!-- Header -->
-    <header class="masthead d-flex">
-      <div class="container text-center my-auto">
-        <div class="mx-auto mb-5">
-						{{ if .RefreshToken }}
-						<form action="{{ .RedirectURL }}" method="post">
-							<input type="hidden" name="refresh_token" value="{{ .RefreshToken }}">
-							<input class="mr-4" type="submit" value="Redeem refresh token">
-							</form>
-						{{ end }}
-						</div>
-						<div class="mx-auto mb-5">
-						<form action="/download" method="post">
-							<input type="hidden" name="refresh_token" value="{{ .RefreshToken }}">
-							<input class="mr-4" type="hidden" name="id_token" value="{{ .IDToken }}">
-							Namespace:
-								<select name="namespace">
-									{{- range .NamespaceList }}
-									<option value="{{ . }}">{{ . }}</option>
-									{{- end }}
-								</select>
-							<input type="hidden" name="internal" value="false">
-							<input class="mr-4" type="submit" value="Download Kubeconfig">
-						</form>
-						</div>
-						<div class="mx-auto mb-5"></div>
-						<form action="/download" method="post">
-							<input type="hidden" name="refresh_token" value="{{ .RefreshToken }}">
-							<input type="hidden" name="id_token" value="{{ .IDToken }}">
-							Namespace:
-								<select name="namespace">
-									{{- range .NamespaceList }}
-									<option value="{{ . }}">{{ . }}</option>
-									{{- end }}
-								</select>
-							<input type="hidden" name="internal" value="true">
-							<input class="mr-4" type="submit" value="Download Internal Kubeconfig">
-						</form>
-					</div>
+<body id="page-top">
+  <!-- Navigation -->
+  <!-- Header -->
+  <header class="masthead d-flex">
+    <div class="container text-center my-auto">
+      <div class="mx-auto mb-5">
+        {{ if .RefreshToken }}
+        <form action="{{ .RedirectURL }}" method="post">
+          <input type="hidden" name="refresh_token" value="{{ .RefreshToken }}">
+          <input class="mr-4" type="submit" value="Redeem refresh token">
+        </form>
+        {{ end }}
       </div>
-      <div class="overlay"></div>
-    </header>
+      <div class="mx-auto mb-5">
+        <form action="/download" method="post">
+          <input type="hidden" name="refresh_token" value="{{ .RefreshToken }}">
+          <input class="mr-4" type="hidden" name="id_token" value="{{ .IDToken }}"> Namespace:
+          <select name="namespace">
+            {{- range .NamespaceList }}
+            <option value="{{ . }}">{{ . }}</option>
+            {{- end }}
+          </select>
+          <input type="hidden" name="internal" value="false">
+          <input class="mr-4" type="submit" value="Download Kubeconfig">
+        </form>
+      </div>
+      <div class="mx-auto mb-5"></div>
+      <form action="/download" method="post">
+        <input type="hidden" name="refresh_token" value="{{ .RefreshToken }}">
+        <input type="hidden" name="id_token" value="{{ .IDToken }}"> Namespace:
+        <select name="namespace">
+          {{- range .NamespaceList }}
+          <option value="{{ . }}">{{ . }}</option>
+          {{- end }}
+        </select>
+        <input type="hidden" name="internal" value="true">
+        <input class="mr-4" type="submit" value="Download Internal Kubeconfig">
+      </form>
+    </div>
+    </div>
+    <div class="overlay"></div>
+  </header>
 
+  <!-- Bootstrap core JavaScript -->
+  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Plugin JavaScript -->
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded js-scroll-trigger" href="assets/#page-top">
-      <i class="fa fa-angle-up"></i>
-    </a>
+  <!-- Custom scripts for this template -->
+  <script src="assets/js/stylish-portfolio.min.js"></script>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="js/stylish-portfolio.min.js"></script>
-
-  </body>
+</body>
 
 </html>
